--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ coverage = "^7.2.7"
 django-debug-toolbar = "^4.1.0"
 django-slowtests = "^1.1.1"
 django-types = "^0.18.0"
+factory-boy = "3.2.1"
 flake8 = "^6.0.0"
 flake8-bugbear = "^23.7.10"
 invoke = "^2.1.3"
@@ -49,6 +50,7 @@ pylint-django = "^2.5.3"
 pylint-nautobot = "^0.2.1"
 python-dotenv = "^1.0.1"
 toml = "^0.10.2"
+types-factory-boy = "0.4.1"
 types-graphene = "^0.22"
 types-jsonschema = "^4.19.0.3"
 types-toml = "^0.10.8.7"
@@ -62,7 +64,6 @@ mkdocs = "1.5.3"
 mkdocs-include-markdown-plugin = "6.0.4"
 mkdocs-material = "9.5.0"
 mkdocs-version-annotations = "1.0.0"
-mkdocstrings = "0.22.0"
 mkdocstrings-python = "1.5.2"
 
 [tool.pylint.main]
@@ -135,6 +136,7 @@ warn_unused_configs = true
 [[tool.mypy.overrides]]
 module = [
     "django_filters.*",
+    "django_jinja.*",
     "django_tables2.*",
     "nautobot.*",
     "rest_framework.*",
