Update dev env image name
Signed-off-by: Mark Troyer <mtroyer@nvidia.com>

--- a/development/docker-compose.base.yml
+++ b/development/docker-compose.base.yml
@@ -9,7 +9,7 @@ x-nautobot-build:
     dockerfile: "development/Dockerfile"
 x-nautobot-base:
   &nautobot-base
-  image: "nautobot-consumables/nautobot:${NAUTOBOT_VER}-py${PYTHON_VER}"
+  image: "consumables/nautobot:${NAUTOBOT_VER}-py${PYTHON_VER}"
   env_file:
     - "development.env"
     - "creds.env"
