--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,11 +60,11 @@ unittest-xml-reporting = "^3.2.0"
 optional = true
 
 [tool.poetry.group.docs.dependencies]
-mkdocs = "1.5.3"
-mkdocs-include-markdown-plugin = "6.0.4"
-mkdocs-material = "9.5.0"
-mkdocs-version-annotations = "1.0.0"
-mkdocstrings-python = "1.5.2"
+mkdocs = "^1.5.3"
+mkdocs-include-markdown-plugin = "^6.0.4"
+mkdocs-material = "^9.5.0"
+mkdocs-version-annotations = "^1.0.0"
+mkdocstrings-python = "^1.5.2"
 
 [tool.pylint.main]
 analyse-fallback-blocks = "no"
