Initial v2 migration updates
Set new dependencies in pyproject.toml, app config

Update imports from nautobot pylint report

Signed-off-by: Mark Troyer <mtroyer@nvidia.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "nautobot-consumables"
-version = "1.0.1a0"
+version = "2.0.0a0"
 description = "Consumables Tracking for Nautobot"
 authors = ["Mark Troyer <mtroyer@nvidia.com>"]
 maintainers = ["Mark Troyer <mtroyer@nvidia.com>"]
@@ -8,7 +8,7 @@ license = "Apache-2.0"
 readme = "README.md"
 homepage = "https://github.com/NVIDIA/nautobot-app-consumables"
 repository = "https://github.com/NVIDIA/nautobot-app-consumables"
-keywords = ["nautobot", "nautobot-plugin"]
+keywords = ["nautobot", "nautobot-app", "nautobot-plugin"]
 classifiers = [
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.10",
@@ -28,7 +28,7 @@ build-backend = "poetry.core.masonry.api"
 [tool.poetry.dependencies]
 # Used for local development
 python = ">=3.10,<3.12"
-nautobot = "^1.6.1"
+nautobot = "^2.0.0"
 
 [tool.poetry.group.dev.dependencies]
 bandit = "^1.7.5"
@@ -60,11 +60,11 @@ unittest-xml-reporting = "^3.2.0"
 optional = true
 
 [tool.poetry.group.docs.dependencies]
-mkdocs = "^1.5.3"
-mkdocs-include-markdown-plugin = "^6.0.4"
-mkdocs-material = "^9.5.0"
+mkdocs = "^1.6.0"
+mkdocs-include-markdown-plugin = "^6.2.2"
+mkdocs-material = "^9.5.32"
 mkdocs-version-annotations = "^1.0.0"
-mkdocstrings-python = "^1.5.2"
+mkdocstrings-python = "^1.10.8"
 
 [tool.pylint.main]
 analyse-fallback-blocks = "no"
@@ -111,7 +111,7 @@ disable = [
 ]
 
 [tool.pylint-nautobot]
-supported_nautobot_versions = ["1"]
+supported_nautobot_versions = ["1", "2"]
 
 [tool.pydocstyle]
 convention = "google"
