Add workflow to publish documentation
Signed-off-by: Mark Troyer <mtroyer@nvidia.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,12 +6,10 @@ concurrency:
   cancel-in-progress: true
 
 on:
-  push:
-    branches:
-      - "main"
-      - "dev"
-      - "ltm-*"
-  pull_request: ~
+  pull_request:
+    paths:
+      - "nautobot_consumables/**"
+      - "!nautobot_consumables/templates/**"
   workflow_dispatch:
 
 env:
