--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -109,14 +109,14 @@ jobs:
       matrix:
         python-version: ["3.11", "3.12"]
         db-backend: ["postgresql"]
-        nautobot-version: ["2.3.10"]
+        nautobot-version: ["stable"]
         include:
           - python-version: "3.11"
             db-backend: "postgresql"
             nautobot-version: "2.0.6"
           - python-version: "3.12"
             db-backend: "mysql"
-            nautobot-version: "2.3.10"
+            nautobot-version: "stable"
     env:
       INVOKE_NAUTOBOT_CONSUMABLES_PYTHON_VER: "${{ matrix.python-version }}"
       INVOKE_NAUTOBOT_CONSUMABLES_NAUTOBOT_VER: "${{ matrix.nautobot-version }}"
